bitwarden/deployment-amd64.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: bitwarden
  name: bitwarden-amd64
  namespace: tedy
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s-app: bitwarden
  template:
    metadata:
      labels:
        k8s-app: bitwarden
    spec:
      terminationGracePeriodSeconds: 2
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - name: bitwarden
          image: mprasil/bitwarden:latest
          resources:
            limits:
              memory: "100Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 3012
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bitwarden
