bitwarden/deployment-arm.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: bitwarden
  name: bitwarden-arm
  namespace: tedy
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: bitwarden
  template:
    metadata:
      labels:
        k8s-app: bitwarden
    spec:
      terminationGracePeriodSeconds: 2
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
      containers:
        - name: bitwarden
          image: mprasil/bitwarden:armv6
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 3012
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bitwarden
