bitwarden/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: bitwarden
  name: bitwarden
  namespace: tedy
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: bitwarden
  template:
    metadata:
      labels:
        k8s-app: bitwarden
    spec:
      terminationGracePeriodSeconds: 2
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: arm
      containers:
        - name: bitwarden
          image: bitwardenrs/server:latest
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 3012
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bitwarden
