bitwarden/service-http.yml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-http
  namespace: tedy
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    k8s-app: bitwarden
  type: ClusterIP
