bitwarden/service-websockets.yml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-websockets
  namespace: tedy
spec:
  ports:
    - name: http
      port: 3012
      protocol: TCP
  selector:
    k8s-app: bitwarden
  type: ClusterIP
