bitwarden/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden
  namespace: tedy
spec:
  routes:
    - match: Host(`bitwarden.stoicatedy.ovh`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: bitwarden-http
          port: 80
    - match: Host(`bitwarden.stoicatedy.ovh`) && PathPrefix(`/notifications/hub/negotiate`)
      kind: Rule
      services:
        - name: bitwarden-http
          port: 80
    - match: Host(`bitwarden.stoicatedy.ovh`) && PathPrefix(`/notifications/hub`)
      kind: Rule
      services:
        - name: bitwarden-websockets
          port: 3012
  middlewares:
    - name: hsts-header
  tls:
    secretName: certificate-stoicatedy-ovh
